# frankish

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  STATE.md  rust-toolchain.toml  versions.env
.github/workflows/: book.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md  title-page.md
book/src/appendix/: decisions.md  glossary.md  versions.md
book/src/architecture/: authoring-surfaces.md  grid.md  interpreter.md  map.md  pipeline.md  runtime.md
book/src/ctl/: calculus.md  lowering.md  tail-calls.md
book/src/dialects/: adt.md  closure.md  contract.md  dyn.md  mem.md  overview.md  str-bstr.md
book/src/memory/: gc.md  strategies.md  war-stories.md
book/src/method/: differential.md  goldens.md  laws.md  ledger.md  milestones.md
book/src/provenance/: landscape.md  toylangs.md
book/src/specimens/: femto-lua.md  ml-core.md  overview.md  r7rs.md  ts0.md  ts1.md  ts3.md
crates/frk-abi/: Cargo.toml
crates/frk-abi/src/: lib.rs
crates/frk-core/: Cargo.toml
crates/frk-core/src/: lib.rs
crates/frk-core/tests/: smoke_jit_add.rs
crates/frk-dialects/: Cargo.toml
crates/frk-dialects/src/: adt.rs  adt_dtree.rs  adt_eval.rs  adt_lower.rs  attr_util.rs  bstr.rs  bstr_eval.rs  closure.rs  closure_eval.rs  contract.rs  contract_eval.rs  ctl.rs  ctl_eval.rs  dtree_emit.rs  dyn_dialect.rs  dyn_eval.rs  kernel_lower.rs  lib.rs  mem.rs  mem_eval.rs  str_dialect.rs  str_eval.rs  tail_calls.rs  verify.rs
crates/frk-dialects/tests/: abi_declarations.rs  adt_dtree.rs  adt_eval.rs  adt_lower.rs  adt_smoke.rs  adt_verify.rs  closure_eval.rs  closure_smoke.rs  contract_eval.rs  contract_lower.rs  contract_promote.rs  ctl_eval.rs  dtree_emit.rs  dyn_iface.rs  dyn_iface_lower.rs  dyn_smoke.rs  layout_parity.rs  mem_field.rs  mem_field_lower.rs  mem_field_words.rs  mem_global.rs  mem_smoke.rs  registration.rs
crates/frk-front/: Cargo.toml
crates/frk-front/src/: ast.rs  emit.rs  infer.rs  intrinsics.rs  lex.rs  lib.rs  loanword.rs  ts_intrinsics.mlir  types.rs
crates/frk-front/src/lua/: ast.rs  emit.rs  intrinsics.mlir  lex.rs  mod.rs
crates/frk-front/src/scheme/: ast.rs  emit.rs  intrinsics.mlir  mod.rs  reader.rs
crates/frk-front/tests/: loanword_contract.rs  ml_e2e.rs  ts1_facts.rs
crates/frk-front/tests/fixtures/: false_fact.ts  oob.ts
crates/frk-harness/: Cargo.toml  build.rs
crates/frk-harness/examples/: build_fib.rs
crates/frk-harness/src/: canon.rs  case.rs  dashboard.rs  diff.rs  golden.rs  lib.rs  pipeline.rs  runner.rs  stages.rs  testutil.rs
crates/frk-harness/tests/: abi_registration.rs  corpus.rs  dyn_native_trap.rs  gc_twin_parity.rs  leak_canary.rs  lua_coro.rs  lua_print_parity.rs  pack_reclamation.rs  scm_globals.rs  scm_guard.rs  scm_param.rs  scm_raise.rs  scm_trap.rs  ts_reserved_names.rs  zz_dbg_lua.rs
crates/frk-interp/: Cargo.toml
crates/frk-interp/src/: error.rs  interp.rs  lib.rs  value.rs
crates/frk-interp/tests/: interp.rs
crates/frk-repl/: Cargo.toml
crates/frk-repl/src/: lib.rs
crates/frk-repl/tests/: engine.rs
crates/frk-rt/: Cargo.toml  build.rs
crates/frk-rt/c/: frk_rt.c  frk_rt_abi.h
crates/frk-rt/src/: lib.rs
crates/frk-rt/tests/: abi_contract.rs
crates/frnksh/: Cargo.toml
crates/frnksh/src/: main.rs
docs/: DECISIONS.md  LANDSCAPE.md  SPEC.md  canon.md  ctl-calculus.md  gc-spike.md  stages.md  type-kit.md
docs/dialects/: adt.md  bstr.md  closure.md  dyn.md  mem.md
goldens/: README.md
goldens/adt/mixed_fields/: case.mlir
goldens/adt/option_none/: case.mlir
goldens/adt/option_some/: case.mlir
goldens/adt/product_pair/: case.mlir
goldens/adt/sum_three_variants/: case.mlir
goldens/bstr/intern_identity/: case.mlir
goldens/closure/church/: case.mlir
goldens/closure/counter_fold/: case.mlir
goldens/closure/uniform_tail/: case.mlir
goldens/ctl/escape_direct/: case.mlir
goldens/ctl/frame_chain/: case.mlir
goldens/ctl/handle_abortive/: case.mlir
goldens/ctl/handle_tail_resume/: case.mlir
goldens/dyn/fun_boxed/: case.mlir
goldens/dyn/roundtrip/: case.mlir
goldens/dyn/tables/: case.mlir
goldens/lua/co_basics/: case.lua  expected.out
goldens/lua/co_cycles/: case.lua
goldens/lua/co_dead/: case.lua  expected.out
goldens/lua/co_deep800/: case.lua  expected.out
goldens/lua/co_deepchain/: case.lua  expected.out
goldens/lua/co_explist/: case.lua  expected.out
goldens/lua/co_loops/: case.lua  expected.out
goldens/lua/co_misc/: case.lua  expected.out
goldens/lua/co_multivals/: case.lua  expected.out
goldens/lua/co_nested/: case.lua  expected.out
goldens/lua/co_normal_resume/: case.lua  expected.out
goldens/lua/co_prodcons/: case.lua  expected.out
goldens/lua/co_stackful/: case.lua  expected.out
goldens/lua/co_status/: case.lua  expected.out
goldens/lua/co_tail_yield/: case.lua  expected.out
goldens/lua/co_wrap/: case.lua  expected.out
goldens/lua/control/: case.lua  expected.out
goldens/lua/custom_iter/: case.lua  expected.out
goldens/lua/functions/: case.lua  expected.out
goldens/lua/generic_for/: case.lua  expected.out
goldens/lua/hello/: case.lua  expected.out
goldens/lua/locals_arith/: case.lua  expected.out
goldens/lua/logic/: case.lua  expected.out
goldens/lua/metatables/: case.lua  expected.out
goldens/lua/multi_rhs/: case.lua  expected.out
goldens/lua/multis/: case.lua  expected.out
goldens/lua/newindex/: case.lua  expected.out
goldens/lua/repeat_break/: case.lua  expected.out
goldens/lua/string_lib/: case.lua  expected.out
goldens/lua/strings/: case.lua  expected.out
goldens/lua/tables/: case.lua  expected.out
goldens/lua/tail_recursion/: case.lua
goldens/lua/varargs_basic/: case.lua  expected.out
goldens/lua/varargs_forward/: case.lua  expected.out
sandbox/: README.md
scripts/: check-pins.sh  ci.sh  setup.sh  zigcc.sh
specimens/: README.md
specimens/c_oracle/: MANIFEST.md
specimens/femto_lua/: MANIFEST.md
specimens/ml_core/: MANIFEST.md
specimens/r7rs_core/: MANIFEST.md
specimens/typescript/: MANIFEST.md
tools/loanword-ts/: package-lock.json  package.json
(+173 files in other folders)
