[package]
name = "frk-dialects"
description = "frankish kernel dialects, one module per dialect (SPEC §4)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
frk-abi.workspace = true
frk-interp.workspace = true
melior.workspace = true
mlir-sys.workspace = true

[dev-dependencies]
frk-rt.workspace = true
frk-core.workspace = true
