[package]
name = "frk-front"
description = "Readers, binder, type kit, loanword consumer (SPEC §6)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
ena.workspace = true
serde_json.workspace = true
sha2.workspace = true
frk-dialects.workspace = true
melior.workspace = true

[dev-dependencies]
frk-core.workspace = true
frk-interp.workspace = true
