[package]
name = "frk-harness"
description = "Golden/differential runners, stage dumps, dashboard emit (SPEC §7)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
frk-core.workspace = true
frk-dialects.workspace = true
frk-interp.workspace = true
melior.workspace = true
