[package]
name = "frk-harness"
description = "Golden/differential runners, stage dumps, dashboard emit (SPEC §7)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[build-dependencies]
frk-abi.workspace = true

[dependencies]
frk-abi.workspace = true
frk-core.workspace = true
frk-dialects.workspace = true
frk-front.workspace = true
frk-interp.workspace = true
frk-repl.workspace = true
frk-rt.workspace = true
melior.workspace = true
