[package]
name = "frk-repl"
description = "The frankish shell engine: REPL semantics D-043 (SPEC §9)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
frk-core.workspace = true
frk-dialects.workspace = true
frk-front.workspace = true
frk-interp.workspace = true
melior.workspace = true
