[package]
name = "frnksh"
description = "frankish driver: REPL-first CLI over JIT and AOT (SPEC §9)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
frk-dialects.workspace = true
frk-core.workspace = true
frk-front.workspace = true
frk-interp.workspace = true
frk-repl.workspace = true
frk-harness.workspace = true
melior.workspace = true
